dev/ldap-basic/01-ldap-basic-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ldap-basic
  labels:
    name: "Namespace_For_basic_LDAP_work"
