dev/ldap-basic/05-php-ldap-admin-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-ldap-admin
  labels:
    app: php-ldap-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-ldap-admin
  template:
    metadata:
      name: php-ldap-admin
      labels:
        app: php-ldap-admin
    spec:
      containers:
        - name: php-ldap-admin
          image: osixia/phpldapadmin:0.9.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: pla-port-s  ## pla=php ldap admin
              containerPort: 443
            - name: pla-port
              containerPort: 80
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 50m
              memory: 50Mi
