dev/ldap-basic/06-php-ldap-admin-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: php-ldap-admin-service
  labels:
    app: php-ldap-admin
  annotations:
    # traefik.ingress.kubernetes.io/affinity: "true"
    # traefik.ingress.kubernetes.io/session-cookie-name: "sticky"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
spec:
  ports:
    - name: pla-port   ## pla is shorthand for php-ldap-admin
      port: 80
    - name: pla-port-s
      port: 443
  selector:
    app: php-ldap-admin
  sessionAffinity: ClientIP
