dev/ldap-basic/07-php-ldap-admin-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: php-ldap-admin-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  rules:
    - host: _INGRESS_ALIAS_
      http:
        paths:
          - backend:
              serviceName: php-ldap-admin-service
              servicePort: 80
